objects/Resource_Off__c/Resource_Off__c.object-meta.xml
<CustomObject>
    <label>Resource Off</label>
    <nameField>
        <displayFormat>Off-{0000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Off</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>