objects/Resource_Off__c/fields/End_Time_24_Hrs__c.field-meta.xml
<CustomField>
    <fullName>End_Time_24_Hrs__c</fullName>
    <formula>TEXT( End_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time 24 Hrs</label>
    <type>Text</type>
</CustomField>