objects/Resource_Off__c/fields/Flat_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Flat_Pay_Rate__c</fullName>
    <label>Flat Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>