objects/Resource_Off__c/fields/Flat_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Type__c</fullName>
    <label>Flat Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flat_Pay_Type</valueSetName>
    </valueSet>
</CustomField>