objects/Resource_Off__c/fields/Is_Borrowed_Resource__c.field-meta.xml
<CustomField>
    <fullName>Is_Borrowed_Resource__c</fullName>
    <formula>Service_Center__c !=  Resource_Service_Center__c</formula>
    <label>Is Borrowed Resource</label>
    <type>Checkbox</type>
</CustomField>