objects/Resource_Off__c/fields/LastModifiedFullDate_Time__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedFullDate_Time__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastModifiedFullDate/Time</label>
    <type>DateTime</type>
</CustomField>