objects/Resource_Off__c/fields/Lunch_End_Time_24_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Lunch_End_Time_24_Hrs__c</fullName>
    <formula>text( Lunch_End_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lunch End Time 24 Hrs</label>
    <type>Text</type>
</CustomField>