objects/Resource_Off__c/fields/Lunch_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Lunch_End_Time__c</fullName>
    <label>Lunch End Time</label>
    <type>Time</type>
</CustomField>