objects/Resource_Off__c/fields/Lunch_Start_Time_24_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Start_Time_24_Hrs__c</fullName>
    <formula>TEXT( Lunch_Start_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lunch Start Time 24 Hrs.</label>
    <type>Text</type>
</CustomField>