objects/Resource_Off__c/fields/Off_Type__c.field-meta.xml
<CustomField>
    <fullName>Off_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Off Type</label>
    <referenceTo>Off_Type__c</referenceTo>
    <relationshipLabel>Resource Offs</relationshipLabel>
    <relationshipName>Resource_Offs</relationshipName>
    <type>Lookup</type>
</CustomField>