objects/Resource_Off__c/fields/Pay_Rule__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Rule</label>
    <referenceTo>Pay_Rule__c</referenceTo>
    <relationshipLabel>Resource Off</relationshipLabel>
    <relationshipName>Resource_Off</relationshipName>
    <type>Lookup</type>
</CustomField>