objects/Resource_Off__c/fields/PTO_Type__c.field-meta.xml
<CustomField>
    <fullName>PTO_Type__c</fullName>
    <label>PTO Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PTO-Sick</fullName>
            </value>
            <value>
                <fullName>PTO-Vacation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>