objects/Resource_Off__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Resource Offs</relationshipLabel>
    <relationshipName>Resource_Offs</relationshipName>
    <type>Lookup</type>
</CustomField>