objects/Resource_Off__c/fields/Resource_Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Resource_Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Service Center</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipLabel>Resource Off (Resource Service Center)</relationshipLabel>
    <relationshipName>Resource_Off1</relationshipName>
    <type>Lookup</type>
</CustomField>