objects/Resource_Off__c/fields/Resource_Title__c.field-meta.xml
<CustomField>
    <fullName>Resource_Title__c</fullName>
    <formula>Resource__r.Resource_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Title</label>
    <type>Text</type>
</CustomField>