objects/Resource_Off__c/fields/Shop_Time_Category__c.field-meta.xml
<CustomField>
    <fullName>Shop_Time_Category__c</fullName>
    <label>Shop Time Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shop_Time_Category</valueSetName>
    </valueSet>
</CustomField>