objects/Resource_Off__c/fields/Site_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Site_End_Time__c</fullName>
    <label>Site End Time</label>
    <type>Time</type>
</CustomField>