objects/Resource_Off__c/fields/Start_Time_24_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_24_Hrs__c</fullName>
    <formula>TEXT( Start_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time 24 Hrs</label>
    <type>Text</type>
</CustomField>