objects/Resource_Off__c/fields/Unavailable_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unavailable_Reason__c</fullName>
    <label>Unavailable Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discipline</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>On Leave</fullName>
            </value>
            <value>
                <fullName>Call Out</fullName>
                <isActive>false</isActive>
                <label>Call Out</label>
            </value>
            <value>
                <fullName>DOT Reset</fullName>
                <isActive>false</isActive>
                <label>DOT Reset</label>
            </value>
            <value>
                <fullName>FMLA</fullName>
                <isActive>false</isActive>
                <label>FMLA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>