objects/Resource_Off__c/fields/Work_as_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_as_Resource_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work as Resource Type</label>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Resource Off</relationshipLabel>
    <relationshipName>Resource_Off</relationshipName>
    <type>Lookup</type>
</CustomField>