objects/Resource_Off__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Description__c</columns>
    <columns>Date__c</columns>
    <columns>Off_Type__c</columns>
    <columns>PTO_Type__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Hours__c</columns>
    <columns>Note__c</columns>
    <columns>Total_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>