objects/Resource_Off__c/listViews/SC01.listView-meta.xml
<ListView>
    <fullName>SC01</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Description__c</columns>
    <columns>Date__c</columns>
    <columns>Off_Type__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Hours__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>090088 - A85</value>
    </filters>
    <label>SC01</label>
</ListView>