objects/Resource_Off__c/listViews/SC31.listView-meta.xml
<ListView>
    <fullName>SC31</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Description__c</columns>
    <columns>Date__c</columns>
    <columns>Off_Type__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Hours__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>9/2/2019</value>
    </filters>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>31</value>
    </filters>
    <label>SC31</label>
</ListView>